crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__test_case__works_with_args.snap
---
source: tests/integration/single_attributes/test_case.rs
expression: format_output(&result)
---
#[implicit_precedence(
    core::pedersen::Pedersen,
    core::RangeCheck,
    core::integer::Bitwise,
    core::ec::EcOp,
    core::poseidon::Poseidon,
    core::SegmentArena,
    core::circuit::RangeCheck96,
    core::circuit::AddMod,
    core::circuit::MulMod,
    core::gas::GasBuiltin,
    System,
)]
#[snforge_internal_test_executable]
fn test_add_1_2_3(mut _data: Span<felt252>) -> Span<felt252> {
    core::internal::require_implicit::<System>();
    core::internal::revoke_ap_tracking();
    core::option::OptionTraitImpl::expect(core::gas::withdraw_gas(), 'Out of gas');
    core::option::OptionTraitImpl::expect(
        core::gas::withdraw_gas_all(core::gas::get_builtin_costs()), 'Out of gas',
    );
    test_add(1, 2, 3);
    let mut arr = ArrayTrait::new();
    core::array::ArrayTrait::span(@arr)
}
#[__internal_config_statement]
fn test_add(x: i128, y: i128, expected: i128) {}
